[blocks-in-inline] Fix fast/block/float/float-not-removed-from-next-sibling5.html https://bugs.webkit.org/show_bug.cgi?id=303590

Reviewed by Antti Koivisto.

Now with [blocks-in-inline] floating objects can be insider RenderBlocks with RenderInline parents.
RenderBlockFlow::markAllDescendantsWithFloatsForLayout needs to look inside RenderInlines
as opposed to iterating over direct block children.

Test: fast/inline/blocks-in-inline-float-crash.html

* LayoutTests/fast/inline/blocks-in-inline-float-crash-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-float-crash.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::markAllDescendantsWithFloatsForLayout):

Canonical link: https://commits.webkit.org/303961@main